--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 
+    <div class="item active">
+        <img src="images/1.png" alt="1" class="img-responsive"/>
+    </div>
+
 <!-- add javascript to bottom of the page so it loads faster-->
 <!--bootstrap uses jquery so need to load jquery script first--> 
 <script src="js/jquery.js"></script>
