--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
     <div class="item active">
-        <img src="images/1.png" alt="1" class="img-responsive"/>
+        <img src="public/images/1.png" alt="1" class="img-responsive"/>
     </div>
 
 </body>
