--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <div class="item active">
         <img src="public/images/1.png" alt="1" class="img-responsive"/>
     </div>
-     <img src="public/images/1.png">
+     <img src="public/images/1.png" class="image-responsive"/>
 </body>
 
 <!-- add javascript to bottom of the page so it loads faster-->
