--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-    <div class="item active">
-        <img src="public/images/1.png" alt="1" class="img-responsive"/>
+
+    <div class="container-fluid bg-1"> //Resizes to screen properly 
+        <div class="row">              //1 row = 12 columns
+            
+            <div class="col-md-3 col-md-offset-1">
+                <div class="item active">
+                    <img src="public/images/1.png" alt="1" class="img-responsive"/>    
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
