--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-    <div class="container-fluid bg-1"> //Resizes to screen properly 
-        <div class="row">              //1 row = 12 columns
+    <div class="container-fluid bg-1"> 
+        <div class="row">              
             
             <div class="col-md-3 col-md-offset-1">
                 <div class="item active">
@@ -14,6 +14,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 
 <!-- add javascript to bottom of the page so it loads faster-->
