--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 class="gallery-title">Digital Artwork</h1>
 
 
-<section id="photos">
+<section="photos" class="col-md-offset-1">
     <img src="public/images/digital/1.jpg" class="img-responsive">
     <img src="public/images/digital/2.jpg" class="img-responsive">
     <img src="public/images/digital/3.jpg" class="img-responsive">
@@ -38,8 +38,7 @@
     <img src="public/images/digital/15.jpg" class="img-responsive">
     <img src="public/images/digital/16.jpg" class="img-responsive">
     <img src="public/images/digital/17.jpg" class="img-responsive">
-    <img src="public/images/digital/18.jpg" class="img-responsive">
-    
+    <img src="public/images/digital/18.jpg" class="img-responsive">    
 </section>
 
 
