--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <h1 class="gallery-title">Digital Artwork</h1>
 
 
-<section="photos" class="col-md-offset-1">
+<section="photos">
     <img src="public/images/digital/1.jpg" class="img-responsive">
     <img src="public/images/digital/2.jpg" class="img-responsive">
     <img src="public/images/digital/3.jpg" class="img-responsive">
