--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
         <img src="public/images/traditional/3.jpg" class="img-responsive">
         <img src="public/images/traditional/4.jpg" class="img-responsive">
         <img src="public/images/traditional/5.jpg" class="img-responsive">
-        <img src="public/images/traditional/6.jpg" class="img-responsive">
+        <img src="public/images/traditional/6.png" class="img-responsive">
         
         <img src="public/images/traditional/7.jpg" class="img-responsive">
-        <img src="public/images/traditional/8.jpg" class="img-responsive">
-        <img src="public/images/traditional/9.jpg" class="img-responsive">
+        <img src="public/images/traditional/8.png" class="img-responsive">
+        <img src="public/images/traditional/9.png" class="img-responsive">
         <img src="public/images/traditional/10.png" class="img-responsive">
         <img src="public/images/traditional/11.jpg" class="img-responsive">
         <img src="public/images/traditional/12.jpg" class="img-responsive">
