Added game link to site

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   For a closer look, right click -> view image<br>
   To download the (almost) full collection, click "links" at the top and choose "Giveaway Download"<br>
   Has someone submitted your artwork? Want your entry removed from the download / gallery? Contact dinoflask@gmail.com <br>
+  Play the winning game at: http://powl.itch.io/jeffthegame<br>
 </div>
 
 <div align="center">
