Fixed runners up

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
   To download the (almost) full collection, click "links" at the top and choose "Giveaway Download"<br>
   Has someone submitted your artwork? Want your entry removed from the download / gallery? Contact dinoflask@gmail.com <br>
   Play the winning game at: http://powl.itch.io/jeffthegame<br>
+  Play the runner up game at: https://bigcooki3.github.io/KaplanStory/<br>
 </div>
 
 <div align="center">
@@ -82,17 +83,15 @@
     </div>
 
     <div class="filter runners">
-        <img src="public/images/digital/11.jpg" class="img-responsive">
+        <img src="public/images/digital/11.gif" class="img-responsive">
         <img src="public/images/digital/15.jpg" class="img-responsive">
         <img src="public/images/digital/4.jpg" class="img-responsive">
+        <img src="public/images/digital/34.gif" class="img-responsive">   
         <img src="public/images/traditional/34.jpg" class="img-responsive">
         <img src="public/images/digital/20.jpg" class="img-responsive"> 
-        <img src="public/images/digital/34.gif" class="img-responsive">   
-        <img src="public/images/digital/19.jpg" class="img-responsive">      
         <img src="public/images/physical/4.jpg" class="img-responsive">   
-        <a href="https://bigcooki3.github.io/KaplanStory/">
-            <img src="public/images/digital/gametitle.jpg" class="img-responsive">
-        </a>
+        <img src="public/images/digital/19.jpg" class="img-responsive">      
+        <img src="public/images/digital/gametitle.jpg" class="img-responsive">
         <img src="public/images/digital/13.jpg" class="img-responsive">
     </div>
     
