--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="public/images/digital/20.jpg" class="img-responsive"> 
         <img src="public/images/physical/4.jpg" class="img-responsive">   
         <img src="public/images/digital/19.jpg" class="img-responsive">      
-        <img src="public/images/digital/gametitle.jpg" class="img-responsive">
+        <img src="public/images/digital/35.png" class="img-responsive">
         <img src="public/images/digital/13.jpg" class="img-responsive">
     </div>
     
